syntax = "proto3";

package product;

option go_package = "cluster-iac/api/proto/product;product";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}

message GetProductRequest {
  uint32 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message GetProductsRequest {
  repeated uint32 ids = 1;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  string image_url = 7;
  string created_at = 8;
  string updated_at = 9;
}
